feat: Add CORS to backend
