# back-end/src/go/api.go
@@ -12,14 +12,12 @@ package openapi
 import (
 	"context"
 	"net/http"
-	"os"
 )
 
-
-// DefaultApiRouter defines the required methods for binding the api requests to a responses for the DefaultApi
-// The DefaultApiRouter implementation should parse necessary information from the http request, 
+// DefaultAPIRouter defines the required methods for binding the api requests to a responses for the DefaultApi
+// The DefaultAPIRouter implementation should parse necessary information from the http request,
 // pass the data to a DefaultApiServicer to perform the required actions, then write the service results to the http response.
-type DefaultApiRouter interface { 
+type DefaultAPIRouter interface {
 	AddImageToVideo(http.ResponseWriter, *http.Request)
 	AddVideo(http.ResponseWriter, *http.Request)
 	DeleteImage(http.ResponseWriter, *http.Request)
@@ -32,20 +30,19 @@ type DefaultApiRouter interface {
 	UpdateVideo(http.ResponseWriter, *http.Request)
 }
 
-
-// DefaultApiServicer defines the api actions for the DefaultApi service
-// This interface intended to stay up to date with the openapi yaml used to generate it, 
-// while the service implementation can ignored with the .openapi-generator-ignore file 
+// DefaultAPIServicer defines the api actions for the DefaultApi service
+// This interface intended to stay up to date with the openapi yaml used to generate it,
+// while the service implementation can ignored with the .openapi-generator-ignore file
 // and updated with the logic required for the API.
-type DefaultApiServicer interface { 
-	AddImageToVideo(context.Context, int32, Image) (interface{}, error)
-	AddVideo(context.Context, string, *os.File) (interface{}, error)
-	DeleteImage(context.Context, int32) (interface{}, error)
-	DeleteVideo(context.Context, int32) (interface{}, error)
-	GetImage(context.Context, int32) (interface{}, error)
-	GetImagesFromVideo(context.Context, int32) (interface{}, error)
-	GetVideo(context.Context, int32) (interface{}, error)
+type DefaultAPIServicer interface {
+	AddImageToVideo(context context.Context, id string, name string, secteurID string, time string, pid string, ext string) (interface{}, error)
+	AddVideo(context context.Context, title string, vid string, ext string) (interface{}, error)
+	DeleteImage(context.Context, string) (interface{}, error)
+	DeleteVideo(context.Context, string) (interface{}, error)
+	GetImage(context.Context, string) (interface{}, error)
+	GetImagesFromVideo(context.Context, string) (interface{}, error)
+	GetVideo(context.Context, string) (interface{}, error)
 	GetVideos(context.Context) (interface{}, error)
-	UpdateImage(context.Context, int32, Image) (interface{}, error)
-	UpdateVideo(context.Context, int32, Video) (interface{}, error)
+	UpdateImage(context.Context, string, Image) (interface{}, error)
+	UpdateVideo(context.Context, string, Video) (interface{}, error)
 }
